--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,15 @@
-extends:
-    - airbnb
-rules:
-    strict: off
 env:
-    mocha: true
+  commonjs: true
+  es6: true
+  mocha: true
+  node: true
+extends:
+  - airbnb-base
+globals:
+  Atomics: readonly
+  SharedArrayBuffer: readonly
+parserOptions:
+  ecmaVersion: 2018
+rules: {
+  strict: off
+}
