--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
   "main": "index.js",
   "bin": {},
   "scripts": {
-    "test": "node ./node_modules/istanbul/lib/cli.js cover _mocha -- -R spec && node ./node_modules/istanbul/lib/cli.js check-coverage --line 70 coverage/coverage.json",
+    "test": "nyc mocha -- -R spec && nyc check-coverage --lines 70",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "aws-sdk-mock": "^1.6.1",
-    "chai": "^3.5.0",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "istanbul": "^0.4.5",
-    "mocha": "^2.2.5"
+    "aws-sdk-mock": "^5.1.0",
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1"
   },
   "dependencies": {
     "aws-sdk": "^2.2.33",
